--- a/src/main/resources/com/cse213project/toll_plaza_management/Sonda_2331200/Customer_Service_Agent/PendingComplaints.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sonda_2331200/Customer_Service_Agent/PendingComplaints.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sonda_2331200.Customer_Service_Agent.PendingComplaintsController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sonda_2331200.Customer_Service_Agent.PendingComplaintsController">
    <children>
-      <TableView fx:id="pendingComplaintsTable" layoutY="-1.0" prefHeight="500.0" prefWidth="713.0">
+      <TableView fx:id="pendingComplaintsTable" layoutY="-1.0" prefHeight="404.0" prefWidth="713.0">
         <columns>
-          <TableColumn fx:id="pendingComplaintsTable" prefWidth="696.6666361093521" text="Pending Complaints" />
+          <TableColumn fx:id="pendingComplaintsCol" prefWidth="696.6666361093521" text="Pending Complaints" />
         </columns>
       </TableView>
+      <Button layoutX="331.0" layoutY="433.0" mnemonicParsing="false" onAction="#backOnDashboard" text="Back" />
    </children>
 </AnchorPane>
