--- a/src/main/resources/com/cse213project/toll_plaza_management/Sonda_2331200/Customer_Service_Agent/SearchComplaintHistory.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sonda_2331200/Customer_Service_Agent/SearchComplaintHistory.fxml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sonda_2331200.Customer_Service_Agent.SearchComplaintHistoryController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sonda_2331200.Customer_Service_Agent.SearchComplaintHistoryController">
    <children>
       <TextField fx:id="searchCustomerId" layoutX="22.0" layoutY="28.0" />
       <Button layoutX="234.0" layoutY="28.0" mnemonicParsing="false" onAction="#handleSearchComplaintHistory" text="Search" />
-      <TableView fx:id="complaintHistoryTable" layoutX="22.0" layoutY="88.0" prefHeight="200.0" prefWidth="565.0">
+      <TableView fx:id="complaintHistoryTable" layoutY="88.0" prefHeight="200.0" prefWidth="700.0">
         <columns>
           <TableColumn prefWidth="563.9999993642172" text="complaintHistoryTable" />
         </columns>
       </TableView>
+      <Button layoutX="324.0" layoutY="385.0" mnemonicParsing="false" onAction="#backOnDashboard" prefHeight="34.0" prefWidth="64.0" text="Back" />
    </children>
 </AnchorPane>
