--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/TemporaryBlock.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/TemporaryBlock.fxml
@@ -9,11 +9,9 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Traffic_Inspector.TemporaryBlockController">
    <children>
-      <Button layoutX="89.0" layoutY="63.0" mnemonicParsing="false" onAction="#blocklaneOnaction" prefHeight="49.0" prefWidth="102.0" text="Block Lane" />
-      <ComboBox fx:id="selectlaneCb" layoutX="89.0" layoutY="134.0" prefWidth="150.0" promptText="Select lane " />
-      <Label layoutX="38.0" layoutY="191.0" text="Provide reason for block" />
-      <TextArea fx:id="reasonforblockTa" layoutX="178.0" layoutY="177.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button layoutX="426.0" layoutY="217.0" mnemonicParsing="false" onAction="#confirmactionOnaction" text="Confirm Action" />
+      <Button layoutX="423.0" layoutY="250.0" mnemonicParsing="false" onAction="#blocklaneOnaction" prefHeight="49.0" prefWidth="102.0" text="Block Lane" />
+      <ComboBox fx:id="selectlaneCb" layoutX="89.0" layoutY="132.0" prefWidth="150.0" promptText="Select lane " />
+      <TextArea fx:id="reasonforblockTa" layoutX="89.0" layoutY="175.0" prefHeight="200.0" prefWidth="200.0" promptText="Provide reason for block" />
       <Label layoutX="89.0" layoutY="14.0" text="Temporarily block toll lanes for emergencies">
          <font>
             <Font size="24.0" />
