--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/viewentryandexit.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/viewentryandexit.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,10 +13,11 @@
    <children>
       <TextField fx:id="vehicleidTf" layoutX="123.0" layoutY="76.0" />
       <Button layoutX="56.0" layoutY="120.0" mnemonicParsing="false" onAction="#searchlogsOnaction" prefHeight="36.0" prefWidth="80.0" text="Search Logs" />
-      <TableView fx:id="logstableTv" layoutX="56.0" layoutY="177.0" prefHeight="200.0" prefWidth="315.0">
+      <TableView fx:id="logstableTv" layoutX="12.0" layoutY="177.0" prefHeight="200.0" prefWidth="359.0">
         <columns>
-          <TableColumn fx:id="timestampsTc" prefWidth="152.66665649414062" text="Time Stamps " />
-          <TableColumn fx:id="lanesTc" prefWidth="161.33331298828125" text="Lanes" />
+          <TableColumn fx:id="timestampsTc" prefWidth="115.99993896484375" text="Time Stamps " />
+          <TableColumn fx:id="lanesTc" prefWidth="114.66665649414062" text="Lanes" />
+            <TableColumn fx:id="idTc" prefWidth="127.33331298828125" text="Id" />
         </columns>
       </TableView>
       <Label layoutX="56.0" layoutY="80.0" text="Vehicle Id" />
@@ -31,5 +33,7 @@
             <Font size="18.0" />
          </font>
       </Button>
+      <TextField fx:id="laneTf" layoutX="355.0" layoutY="76.0" promptText="Lane" />
+      <DatePicker fx:id="timeStampsDp" layoutX="348.0" layoutY="126.0" promptText="Time Stamps" />
    </children>
 </AnchorPane>
