--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/viewtrafficvolume.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/viewtrafficvolume.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -30,5 +31,7 @@
             <Font size="18.0" />
          </font>
       </Button>
+      <TextField fx:id="vehicleTypeTf" layoutX="357.0" layoutY="78.0" promptText="Vehicle type" />
+      <TextField fx:id="countNumberTf" layoutX="357.0" layoutY="122.0" promptText="Count number" />
    </children>
 </AnchorPane>
